2008-01-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph.h (igraph_i_lazy_adjlist_t, igraph_lazy_adjlist_t)
	(igraph_i_lazy_adjedgelist_t, igraph_lazy_adjedgelist_t) : renamed
	* src/community.c
	* src/revolver_grow.c
	* src/adjlist.c
	* src/topology.c
	* src/structural_properties.c
	* src/cocitation.c : updated

2008-01-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isomorphic) : rewritten
	
	* src/topology.c (igraph_isomorphic_34) : added
	(igraph_subisomorphic) : added

	* src/topology.c (igraph_isoclass, igraph_isoclass_subgraph) :
	use igraph_integer_t instead of int
	* examples/simple/topology.c : updated

2008-01-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/bliss.cc (igraph_canonical_permutation) : 'sh' and 'info'
	arguments added
	(igraph_automorphisms) : use 'info' instead if 'no', 'sh' added
	* src/bliss_bignum.hh (Bignum::tostring) : added
	* src/topology.c (igraph_isomorphic_bliss) : 'sh1', 'sh2', 
	'info1', 'info2' arguments added

	* src/topology.c (igraph_isomorphic_bliss) : added

	* src/topology.c (igraph_permute_vertices) : added

	* src/bliss.cc (igraph_canonical_permutation) : added

2008-01-03  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/community.c (igraph_modularity) : added weights argument

	* interfaces/python/src/graphobject.c : adjusted Graph.modularity to
	support weights

	* interfaces/R/src/rinterface.c.in : added null weight argument to
	igraph_modularity call

2008-01-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.v (igraph_revolver_probs_ADE) 
	(igraph_revolver_probs_ADE_dpareto) : added

2007-12-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_df) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_f) : use random order of 
	edges 

2007-12-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_f) : always check edges 
	in decreasing order

2007-12-06  Gabor Csardi  <csardi@rmki.kfki.hu>
